--- a/Inventory/Inventory/View/Login/Login.xaml
+++ b/Inventory/Inventory/View/Login/Login.xaml
@@ -64,6 +64,13 @@
                 BorderWidth="1"
                 Clicked="Login_Clicked"/>
 
+        <Frame
+            x:Name="Loading"
+            IsVisible="False"
+            AbsoluteLayout.LayoutBounds="0.5,0.5,1,0.5"        
+            AbsoluteLayout.LayoutFlags="All">
+            <ActivityIndicator IsRunning="True"/>
+        </Frame>
     </AbsoluteLayout>
 
 </ContentPage>
