Search By user function

--- a/Inventory/Inventory/View/SearchItem/SearchItemOptionPage.xaml
+++ b/Inventory/Inventory/View/SearchItem/SearchItemOptionPage.xaml
@@ -2,227 +2,12 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="Inventory.View.SearchItem.SearchItemOptionPage"
-            xmlns:sys="clr-namespace:System;assembly=mscorlib"
+            xmlns:local="clr-namespace:Inventory.View.SearchItem"
             Title="Search By">
-    
-    <ContentPage Title="Location">
-        <StackLayout>
-            <!-- havent set event changed handler yet !-->
-            <ListView x:Name="locationListView" IsGroupingEnabled="True" GroupDisplayBinding="{Binding SearchCategory}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout Orientation="Horizontal" Padding="20,0,0,0">
-                                <Label Text="{Binding ItemType}" TextColor="Black" VerticalOptions="Center"/>
-                                <Label Text="(3)" VerticalOptions="Center"/>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-            <Button Text="Show All" Clicked="ShowButton_Clicked"/>
-            <!--Button element does not want to be entered in a ViewCell if its in a list; consider alternative UI other than ListView if issue-->
-        </StackLayout>
-    </ContentPage>
+    <local:LocationSearch Title="Location"/>
 
-    <ContentPage Title="User">
-        <StackLayout Padding="5,0,5,0" Orientation="Vertical">
-            
-            <AbsoluteLayout VerticalOptions="Start">
-                <TableView Intent="Form" AbsoluteLayout.LayoutBounds="1,0,1,0.7" AbsoluteLayout.LayoutFlags="All">
-                    <TableRoot>
-                        <TableSection Title="Please known user details">
+    <local:UserSearch Title="User"/>
 
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                    <Label Text="User Name :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                    <Entry Keyboard="Default" 
-                                            Placeholder="'username'" 
-                                            PlaceholderColor="Gray" 
-                                            FontSize="Small" 
-                                            VerticalOptions="Center"
-                                    />
-                                </StackLayout>
-                            </ViewCell>
-
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="User ID :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                    <Entry Keyboard="Default" 
-                                            Placeholder="'id format example'" 
-                                            PlaceholderColor="Gray" 
-                                            FontSize="Small" 
-                                            VerticalOptions="Center"
-                                    />
-                                </StackLayout>
-                            </ViewCell>
-
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" Padding="5,0,5,0">
-                                    <Label Text="Unit :" HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                    <Entry Keyboard="Default" 
-                                            Placeholder="'drop down'" 
-                                            PlaceholderColor="Gray" 
-                                            FontSize="Small" 
-                                            VerticalOptions="Center"
-                                    />
-                                </StackLayout>
-                            </ViewCell>
-
-                        </TableSection>
-
-                    </TableRoot>
-                </TableView>
-
-            </AbsoluteLayout>
-            
-            <StackLayout BackgroundColor="Transparent" Margin="0,0,0,5">
-                <Image HeightRequest="200" WidthRequest="200" BackgroundColor="Gray" HorizontalOptions="Center" VerticalOptions="Start"/>
-                <Button Text="Search"/>
-            </StackLayout>
-            
-        </StackLayout>
-    </ContentPage>
-
-    <ContentPage Title="Item">
-        <StackLayout Padding="5,0,5,0">
-            <TableView>
-                <TableRoot>
-                    <TableSection Title="Please Narrow Down Your Search Criteria">
-                        <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Choose Item Category :" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand"/>
-                                <Picker Title="Category" VerticalOptions="Center" FontSize="Small">
-                                    <Picker.Items>
-                                        <x:String>Computer</x:String>
-                                        <x:String>Accessories</x:String>
-                                        <x:String>Other Devices</x:String>
-                                    </Picker.Items>
-                                </Picker>
-                            </StackLayout>
-                        </ViewCell>
-                        <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Choose Item :" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand"/>
-                                <Picker Title="Item" VerticalOptions="Center" FontSize="Small">
-                                    <Picker.Items>
-                                        <!--If Category Computer-->
-                                        <x:String>Desktop</x:String>
-                                        <x:String>Notebook</x:String>
-                                        <x:String>Tablet</x:String>
-                                        <x:String>Toughbook</x:String>
-                                        <!--If Category Accessories/Parts-->
-                                        <x:String>CMOS Battery</x:String>
-                                        <x:String>FDFSD</x:String>
-                                        <x:String>Hard Case Kit</x:String>
-                                        <x:String>Hard Disk</x:String>
-                                        <x:String>Label Cartridge</x:String>
-                                        <x:String>Locker Compartment</x:String>
-                                        <x:String>Power Supply</x:String>
-                                        <x:String>Projector Screen</x:String>
-                                        <x:String>Rack</x:String>
-                                        <x:String>Rack Mount Server</x:String>
-                                        <x:String>Steel Shelving</x:String>
-                                        <x:String>Stepping Stool</x:String>
-                                        <x:String>Tool and Cable</x:String>
-                                        <x:String>Tripod Screen</x:String>
-                                        <x:String>Trolley</x:String>
-                                        <x:String>USB-to-Serial Converter</x:String>
-                                        <x:String>Velcro</x:String>
-                                        <x:String>VGA Cable - 3m</x:String>
-                                        <x:String>VGA Connector</x:String>
-                                        <x:String>VGA Converter</x:String>
-                                        <x:String>Wall Mounted Screen</x:String>
-                                        <x:String>Bulb Projector</x:String>
-                                        <x:String>Assembly Cartridge</x:String>
-                                        <x:String>VGA Cable - 10m</x:String>
-                                        <x:String>Battery</x:String>
-                                        <x:String>Interface Card</x:String>
-                                        <!--If Category Others-->
-                                        <x:String>Printer</x:String>
-                                        <x:String>Scanner</x:String>
-                                        <x:String>Projector</x:String>
-                                        <x:String>Harddisk</x:String>
-                                        <x:String>Pen Drive</x:String>
-                                        <x:String>Tools Bag</x:String>
-                                        <x:String>Power Supply</x:String>
-                                        <x:String>Battery</x:String>
-                                        <x:String>Screen</x:String>
-                                        <x:String>Switch</x:String>
-                                        <x:String>Mouse</x:String>
-                                        <x:String>Splitter</x:String>
-                                        <x:String>Interface Card</x:String>
-                                        <x:String>FAN</x:String>
-                                    </Picker.Items>
-                                </Picker>
-                            </StackLayout>
-                        </ViewCell>
-                        <ViewCell>
-                            <StackLayout Orientation="Horizontal">
-                                <Label Text="Enter Item Brand" HorizontalOptions="StartAndExpand" VerticalOptions="CenterAndExpand"/>
-                                <Picker Title="Brand" VerticalOptions="Center" FontSize="Small">
-                                    <Picker.Items>
-                                        <x:String>Null</x:String>
-                                        <x:String>Acer</x:String>
-                                        <x:String>Dell</x:String>
-                                        <x:String>Apple</x:String>
-                                        <x:String>Mac</x:String>
-                                        <x:String>Lenovo</x:String>
-                                        <x:String>Samsung</x:String>
-                                        <x:String>Lexmark</x:String>
-                                        <x:String>Toshiba</x:String>
-                                        <x:String>Kyocera</x:String>
-                                        <x:String>Hitachi</x:String>
-                                        <x:String>Transcend</x:String>
-                                        <x:String>APC</x:String>
-                                        <x:String>EPSON</x:String>
-                                        <x:String>INFOCUS</x:String>
-                                        <x:String>CANON</x:String>
-                                        <x:String>Fujitsu</x:String>
-                                        <x:String>HP</x:String>
-                                        <x:String>Sony</x:String>
-                                        <x:String>Western Digital</x:String>
-                                        <x:String>Kingston</x:String>
-                                        <x:String>Alcatel</x:String>
-                                        <x:String>BENQ</x:String>
-                                        <x:String>MT</x:String>
-                                        <x:String>FENGJIE</x:String>
-                                    </Picker.Items>
-                                </Picker>
-                            </StackLayout>
-                        </ViewCell>
-                        <ViewCell>
-                            <StackLayout Orientation="Vertical">
-                                <StackLayout Orientation="Horizontal">
-                                    <StackLayout Orientation="Horizontal">
-                                        <Label Text="Choose the Date Range the Item was Acquired :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                        <DatePicker Date="{x:Static sys:DateTime.Today}" 
-                                                    Format="dd MMM yyyy" 
-                                                    FontSize="Small" 
-                                                    TextColor="Gray" 
-                                                    VerticalOptions="Center"
-                                                    x:Name="StartDate"
-                                        />
-                                    </StackLayout>
-                                    <StackLayout Orientation="Horizontal">
-                                        <DatePicker Date="{x:Static sys:DateTime.Today}" 
-                                                    Format="dd MMM yyyy" 
-                                                    MinimumDate="{x:Static sys:DateTime.Today}"
-                                                    FontSize="Small" 
-                                                    TextColor="Gray" 
-                                                    VerticalOptions="Center"
-                                                    x:Name="EndDate"
-                                        />
-                                    </StackLayout>
-                                </StackLayout>
-                            </StackLayout>
-                        </ViewCell>
-
-                    </TableSection>
-                </TableRoot>
-            </TableView>
-            <Button Text="Search" Clicked="SearchButton_Clicked"/>
-        </StackLayout>
-    </ContentPage>
+    <local:ItemSearch Title="Item"/>
 
 </TabbedPage>
