Finished up all function (SearchbyLocation + SearchByUser)
+) All the function is now finished but still nedd optimized and testing.
+) The SearchByItem detail is remove (Base on scope change).

--- a/Inventory/Inventory/View/AddNew/PopupBrand.xaml
+++ b/Inventory/Inventory/View/AddNew/PopupBrand.xaml
@@ -17,6 +17,7 @@
             <Label Text="Add new Brand"/>
             <local:ImageEntry TextColor="Black" 
          Placeholder="Add Brand"
+         Text=""
          x:Name="Brand"/>
         <Button Text="Add"
            BackgroundColor="White"
