--- a/Inventory/Inventory/View/SearchItem/SearchLocation.xaml
+++ b/Inventory/Inventory/View/SearchItem/SearchLocation.xaml
@@ -39,6 +39,13 @@
             </TableView>
 
             <AbsoluteLayout>
+                <Frame
+                x:Name="Loading"
+                IsVisible="False"
+                AbsoluteLayout.LayoutBounds=".5,.5,1,1"       
+                AbsoluteLayout.LayoutFlags="All">
+                    <ActivityIndicator IsRunning="True"/>
+                </Frame>
                 <ListView x:Name="TypeListView" 
                       HasUnevenRows="True" 
                       VerticalOptions="FillAndExpand"
