--- a/Inventory/Inventory/View/SearchItem/SearchLocation.xaml
+++ b/Inventory/Inventory/View/SearchItem/SearchLocation.xaml
@@ -32,7 +32,11 @@
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
-                            <Button Text="Search" Clicked="Search_Clicked"/>
+                            <Button Text="Search" Clicked="Search_Clicked"    
+                                    BorderColor="Black"
+                                     BorderWidth="1"
+                                     BackgroundColor="#166bf4"
+                                     TextColor="White"/>
                         </ViewCell>
                     </TableSection>
                 </TableRoot>
