--- a/Inventory/Inventory/Services/ItemDetailsServicePage.xaml
+++ b/Inventory/Inventory/Services/ItemDetailsServicePage.xaml
@@ -4,106 +4,107 @@
              x:Class="Inventory.Services.ItemDetailsServicePage"> <!-- The title should be a bindable title of the scanned equipment ID -->
     
     <ContentPage.Content>
-        <AbsoluteLayout>
-            <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"        
+        <ScrollView Orientation="Vertical">
+            <AbsoluteLayout>
+
+                <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"        
             AbsoluteLayout.LayoutFlags="All">
 
-                <Image HorizontalOptions="Center" x:Name="ItemPic" WidthRequest="200" HeightRequest="200"/>
-                <TableView Intent="Data">
-                    <TableRoot >
+                    <Image HorizontalOptions="Center" x:Name="ItemPic" HeightRequest="300"/>
+                    <TableView Intent="Data" HeightRequest="870">
+                        <TableRoot >
+                            <TableSection Title="Item Details">
+                                <!-- All details on this page should be bindable to the scanned item qr code/barcode -->
+                                <ViewCell >
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Equipment ID: " HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'equipmentId'" VerticalOptions="Center" FontSize="Small" x:Name="EquipID"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Serial No. : " HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
+                                        <Label Text="'serialNo" VerticalOptions="Center" FontSize="Small" x:Name="SerialNum"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Item Type :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'itemType'" VerticalOptions="Center" FontSize="Small" x:Name="EType"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Item Category :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'itemCategory'" VerticalOptions="Center" FontSize="Small" x:Name="CateGory"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Brand :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'brand'" VerticalOptions="Center" FontSize="Small" x:Name="ItemBrand"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Model :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'Model'" VerticalOptions="Center" FontSize="Small" x:Name="ItemModel"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Processor :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'Processor'" VerticalOptions="Center" FontSize="Small" x:Name="ItemProcessor"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Ram :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'Ram'" VerticalOptions="Center" FontSize="Small" x:Name="ItemRam"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="HDD :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'HDD'" VerticalOptions="Center" FontSize="Small" x:Name="ItemHDD"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="VGA :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'VGA'" VerticalOptions="Center" FontSize="Small" x:Name="ItemVGA"/>
+                                    </StackLayout>
+                                </ViewCell>
 
-                        <TableSection Title="Item Details">
-                            <!-- All details on this page should be bindable to the scanned item qr code/barcode -->
-                            <ViewCell >
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Equipment ID: " HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'equipmentId'" VerticalOptions="Center" FontSize="Small" x:Name="EquipID"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Serial No. : " HorizontalOptions="StartAndExpand" VerticalTextAlignment="Center"/>
-                                    <Label Text="'serialNo" VerticalOptions="Center" FontSize="Small" x:Name="SerialNum"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Item Type :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'itemType'" VerticalOptions="Center" FontSize="Small" x:Name="EType"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Item Category :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'itemCategory'" VerticalOptions="Center" FontSize="Small" x:Name="CateGory"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Brand :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'brand'" VerticalOptions="Center" FontSize="Small" x:Name="ItemBrand"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Model :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'Model'" VerticalOptions="Center" FontSize="Small" x:Name="ItemModel"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Processor :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'Processor'" VerticalOptions="Center" FontSize="Small" x:Name="ItemProcessor"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Ram :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'Ram'" VerticalOptions="Center" FontSize="Small" x:Name="ItemRam"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="HDD :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'HDD'" VerticalOptions="Center" FontSize="Small" x:Name="ItemHDD"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="VGA :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'VGA'" VerticalOptions="Center" FontSize="Small" x:Name="ItemVGA"/>
-                                </StackLayout>
-                            </ViewCell>
+                            </TableSection>
 
-                        </TableSection>
+                            <TableSection x:Name="ItemStatusSection">
 
-                        <TableSection x:Name="ItemStatusSection">
-
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Currently Issued To :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'issuedUserName'" VerticalOptions="Center" FontSize="Small" x:Name="issuedUser"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Unit :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'issuedUserUnit'" VerticalOptions="Center" FontSize="Small" x:Name="issuedUserUnit" />
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Contact No. :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'issuedUserContactNo'" VerticalOptions="Center" FontSize="Small" x:Name="issuedUserContactNo"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <ViewCell>
-                                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
-                                    <Label Text="Location :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
-                                    <Label Text="'location'" VerticalOptions="Center" FontSize="Small" x:Name="Location"/>
-                                </StackLayout>
-                            </ViewCell>
-                            <!--<ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Currently Issued To :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'issuedUserName'" VerticalOptions="Center" FontSize="Small" x:Name="issuedUser"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Unit :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'issuedUserUnit'" VerticalOptions="Center" FontSize="Small" x:Name="issuedUserUnit" />
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Contact No. :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'issuedUserContactNo'" VerticalOptions="Center" FontSize="Small" x:Name="issuedUserContactNo"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <ViewCell>
+                                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
+                                        <Label Text="Location :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
+                                        <Label Text="'location'" VerticalOptions="Center" FontSize="Small" x:Name="Location"/>
+                                    </StackLayout>
+                                </ViewCell>
+                                <!--<ViewCell>
                             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
                                 <Label Text="Delivery Order No. :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
                                 <Label Text="'deliveryOrderNo'" VerticalOptions="Center" FontSize="Small"/>
@@ -115,13 +116,13 @@
                                 <Label Text="'deliveryDate'" VerticalOptions="Center" FontSize="Small"/>
                             </StackLayout>
                         </ViewCell>-->
-                            <!--<ViewCell>
+                                <!--<ViewCell>
                             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" Padding="5,0,5,0">
                                 <Label Text="Years in use :" HorizontalOptions="StartAndExpand" VerticalOptions="Center"/>
                                 <Label Text="'DateSpan of deliveryDate to TodayDate'" VerticalOptions="Center" FontSize="Small"/>
                                 -->
-                            <!-- Wanted to include a datespan so that user knows the years the item has been in use -->
-                            <!--
+                                <!-- Wanted to include a datespan so that user knows the years the item has been in use -->
+                                <!--
                             </StackLayout>
                         </ViewCell>
                         <ViewCell>
@@ -136,21 +137,29 @@
                                 <Label Text="'supplierName'" VerticalOptions="Center" FontSize="Small"/>
                             </StackLayout>
                         </ViewCell>-->
-                            <!-- Did not include quantity because does each QR code have multiple items? shouldnt it be each item have onl 1 unique ID? -->
+                                <!-- Did not include quantity because does each QR code have multiple items? shouldnt it be each item have onl 1 unique ID? -->
 
-                        </TableSection>
+                            </TableSection>
 
-                    </TableRoot>
-                </TableView>
-            </StackLayout>
-            <Frame
+                        </TableRoot>
+                    </TableView>
+                    <Grid IsVisible="False" x:Name="GridOwner">
+                        <Label Text="Name" Grid.Column="0" Grid.Row="0"/>
+                        <Label Text="Indentity Number" Grid.Column="1" Grid.Row="0"/>
+                        <Label Text="Received Date" Grid.Column="2" Grid.Row="0"/>
+                    </Grid>
+
+                </StackLayout>
+
+                <Frame
             x:Name="Loading"
             IsVisible="False"
             AbsoluteLayout.LayoutBounds="0.5,0.5,1,0.5"        
             AbsoluteLayout.LayoutFlags="All">
-                <ActivityIndicator IsRunning="True"/>
-            </Frame>
-        </AbsoluteLayout>
+                    <ActivityIndicator IsRunning="True"/>
+                </Frame>
+            </AbsoluteLayout>
+        </ScrollView>
     </ContentPage.Content>
 
 </ContentPage>
